<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cavetale.wardrobe</groupId>
  <artifactId>wardrobe</artifactId>
  <version>0.1-SNAPSHOT</version>

  <name>Wardrobe</name>
  <url>https://github.com/StarTux/Wardrobe</url>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <finalName>${project.name}</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>
  <repositories>

    <!-- Paper Repo -->
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>

    <!-- Cavetale Repo -->
    <repository>
      <id>cavetale</id>
      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
    </repository>

  </repositories>
  <dependencies>

    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.17.1-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.20</version>
      <scope>provided</scope>
    </dependency>

    <!-- Core -->
    <dependency>
      <groupId>com.cavetale.core</groupId>
      <artifactId>core</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Mytems -->
    <dependency>
      <groupId>com.cavetale.mytems</groupId>
      <artifactId>mytems</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- PlayerCache -->
    <dependency>
      <groupId>com.winthier.playercache</groupId>
      <artifactId>playercache</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- SQL -->
    <dependency>
      <groupId>com.winthier.sql</groupId>
      <artifactId>sql</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>
</project>
